to hash 7fdf719964dc4e944090b1e31cdbd3a0661c8559

--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,12 @@ bower_components/
 bin/
 ext/
 builtin/
+apidocs/
 api/
 benchmark/
 package-examples/
+mirror-setting.json
+local-setting.json
 
 # webstorm
 .idea
